ansr anim/finished card fadeouts

--- a/index.html
+++ b/index.html
@@ -152,82 +152,82 @@
         </ul>
         <ul class="col">
             <li class="cat">Category 4</li>
-            <li class="points" onclick="openPopup41()">100</li>
+            <li class="points" id="card16" onclick="openPopup41()">100</li>
             <div class="popup" id="popup41">
                 <h2>100 POINT QUESTION</h2>
                 <p>bruh face momen</p>
-                <p class="prev" onclick="displayAns16()">Answer</p>
+                <p class="prev" onclick="displayAns16(), removeCard16()">Answer</p>
                 <span class="ans" id="ans16">gwafwafwad</span>
                 <button type="button" onclick="closePopup41(), removeAns16()">close</button>
             </div>
-            <li class="points" onclick="openPopup42()">200</li>
+            <li class="points" id="card17" onclick="openPopup42()">200</li>
             <div class="popup" id="popup42">
                 <h2>200 POINT QUESTION</h2>
                 <p>cmon bruh, look at u</p>
-                <p class="prev" onclick="displayAns17()">Answer</p>
+                <p class="prev" onclick="displayAns17(), removeCard17()">Answer</p>
                 <span class="ans" id="ans17">omg omg omg</span>
                 <button type="button" onclick="closePopup42(), removeAns17()">close</button>
             </div>
-            <li class="points" onclick="openPopup43()">300</li>
+            <li class="points" id="card18" onclick="openPopup43()">300</li>
             <div class="popup" id="popup43">
                 <h2>300 POINT QUESTION</h2>
                 <p>bruh still lookin goofy</p>
-                <p class="prev" onclick="displayAns18()">Answer</p>
+                <p class="prev" onclick="displayAns18(), removeCard18()">Answer</p>
                 <span class="ans" id="ans18">spiderpig</span>
                 <button type="button" onclick="closePopup43(), removeAns18()">close</button>
             </div>
-            <li class="points" onclick="openPopup44()">400</li>
+            <li class="points" id="card19" onclick="openPopup44()">400</li>
             <div class="popup" id="popup44">
                 <h2>400 POINT QUESTION</h2>
                 <p>why bruh still here?</p>
-                <p class="prev" onclick="displayAns19()">Answer</p>
+                <p class="prev" onclick="displayAns19(), removeCard19()">Answer</p>
                 <span class="ans" id="ans19">cody is gay</span>
                 <button type="button" onclick="closePopup44(), removeAns19()">close</button>
             </div>
-           <li class="points" onclick="openPopup45()">500</li>
+           <li class="points" id="card20" onclick="openPopup45()">500</li>
            <div class="popup" id="popup45">
             <h2>500 POINT QUESTION</h2>
             <p>go away bruh frfr</p>
-            <p class="prev" onclick="displayAns20()">Answer</p>
+            <p class="prev" onclick="displayAns20(), removeCard20()">Answer</p>
             <span class="ans" id="ans20">chief littlefoot</span>
             <button type="button" onclick="closePopup45(), removeAns20()">close</button>
         </div>
         </ul>
         <ul class="col">
             <li class="cat">Misc.</li>
-            <li class="points" onclick="openPopup51()">100</li>
+            <li class="points" id="card21" onclick="openPopup51()">100</li>
             <div class="popup" id="popup51">
                 <h2>100 POINT QUESTION</h2>
                 <p>bruhbruhbruh</p>
-                <p class="prev" onclick="displayAns21()">Answer</p>
+                <p class="prev" onclick="displayAns21(), removeCard21()">Answer</p>
                 <span class="ans" id="ans21">andrew the giant</span>
                 <button type="button" onclick="closePopup51(), removeAns21()">close</button>
             </div>
-            <li class="points" onclick="openPopup52()">200</li>
+            <li class="points" id="card22" onclick="openPopup52()">200</li>
             <div class="popup" id="popup52">
                 <h2>200 POINT QUESTION</h2>
                 <p>cmon lil bruh watchu doin?</p>
-                <p class="prev" onclick="displayAns22()">Answer</p>
+                <p class="prev" onclick="displayAns22(), removeCard22()">Answer</p>
                 <span class="ans" id="ans22">ivar the micro</span>
                 <button type="button" onclick="closePopup52(), removeAns22()">close</button>
             </div>
-            <li class="points" onclick="openPopup53()">300</li>
+            <li class="points" id="card23" onclick="openPopup53()">300</li>
             <div class="popup" id="popup53">
                 <h2>300 POINT QUESTION</h2>
                 <p>dont keep goin bruh</p>
-                <p class="prev" onclick="displayAns23()">Answer</p>
+                <p class="prev" onclick="displayAns23(), removeCard23()">Answer</p>
                 <span class="ans" id="ans23">micro jackson</span>
                 <button type="button" onclick="closePopup53(), removeAns23()">close</button>
             </div>
-            <li class="points" onclick="openPopup54()">400</li>
+            <li class="points" id="card24" onclick="openPopup54()">400</li>
             <div class="popup" id="popup54">
                 <h2>400 POINT QUESTION</h2>
                 <p>hello im rydawg</p>
-                <p class="prev" onclick="displayAns24()">Answer</p>
+                <p class="prev" onclick="displayAns24(), removeCard24()">Answer</p>
                 <span class="ans" id="ans24">Lil Chola</span>
                 <button type="button" onclick="closePopup54(), removeAns24()">close</button>
             </div>
-            <li class="points" onclick="openPopup55()">500</li>
+            <li class="points" id="card25" onclick="openPopup55(), removeCard25()">500</li>
            <div class="popup" id="popup55">
             <h2>500 POINT QUESTION</h2>
             <p>now youve really pissed me off</p>
