question width/size

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             <li class="points" id="card1" onclick="openPopup()">100</li>
                 <div class="popup" id="popup">
                 <h2>100 POINT QUESTION</h2>
-                <p>This is example text.</p>
+                <p class="question">this racial slur is among tims favorites to shout</p>
                 <p class="prev" onclick="displayAns(), removeCard()">Answer</p>
-                <span class="ans" id="ans">insert text</span>
+                <span class="ans" id="ans">the n-word</span>
                 <button type="button" onclick="closePopup(), removeAns()">close</button>
                 </div>
             <li class="points" id="card2" onclick="openPopup2()">200</li>
             <div class="popup" id="popup2">
                 <h2>200 POINT QUESTION</h2>
-                <p>This is epic example text.</p>
+                <p class="question">This is epic example text.</p>
                 <p class="prev" onclick="displayAns2(), removeCard2()">Answer</p>
                 <span class="ans" id="ans2">poopy text</span>
                 <button type="button" onclick="closePopup2(), removeAns2()">close</button>
@@ -43,7 +43,7 @@
             <li class="points" id="card3" onclick="openPopup3()">300</li>
             <div class="popup" id="popup3">
                 <h2>300 POINT QUESTION</h2>
-                <p>This is some more example text.</p>
+                <p class="question">This is some more example text.</p>
                 <p class="prev" onclick="displayAns3(), removeCard3()">Answer</p>
                 <span class="ans" id="ans3">poopy doopy text</span>
                 <button type="button" onclick="closePopup3(), removeAns3()">close</button>
@@ -51,7 +51,7 @@
             <li class="points" id="card4" onclick="openPopup4()">400</li>
             <div class="popup" id="popup4">
                 <h2>400 POINT QUESTION</h2>
-                <p>This is some more epic example text.</p>
+                <p class="question">This is some more epic example text.</p>
                 <p class="prev" onclick="displayAns4(), removeCard4()">Answer</p>
                 <span class="ans" id="ans4">silly text</span>
                 <button type="button" onclick="closePopup4(), removeAns4()">close</button>
@@ -59,7 +59,7 @@
             <li class="points" id="card5" onclick="openPopup5()">500</li>
             <div class="popup" id="popup5">
                 <h2>500 POINT QUESTION</h2>
-                <p>This is the final epic example text.</p>
+                <p class="question">This is the final epic example text.</p>
                 <p class="prev" onclick="displayAns5(), removeCard5()">Answer</p>
                 <span class="ans" id="ans5">silly billy text</span>
                 <button type="button" onclick="closePopup5(), removeAns5()">close</button>
@@ -70,7 +70,7 @@
             <li class="points" id="card6" onclick="openPopup21()">100</li>
             <div class="popup" id="popup21">
                     <h2>100 POINT QUESTION</h2>
-                    <p>i am some text</p>
+                    <p class="question">i am some text</p>
                     <p class="prev" onclick="displayAns6(), removeCard6()">Answer</p>
                     <span class="ans" id="ans6">im the answer</span>
                     <button type="button" onclick="closePopup21(), removeAns6()">close</button>
@@ -78,7 +78,7 @@
             <li class="points" id="card7" onclick="openPopup22()">200</li>
             <div class="popup" id="popup22">
                 <h2>200 POINT QUESTION</h2>
-                <p>i am some more epic text</p>
+                <p class="question">i am some more epic text</p>
                 <p class="prev" onclick="displayAns7(), removeCard7()">Answer</p>
                 <span class="ans" id="ans7">no, im the answer</span>
                 <button type="button" onclick="closePopup22(), removeAns7()">close</button>
@@ -86,7 +86,7 @@
             <li class="points" id="card8" onclick="openPopup23()">300</li>
             <div class="popup" id="popup23">
                 <h2>300 POINT QUESTION</h2>
-                <p>i am some more extra epic text</p>
+                <p class="question">i am some more extra epic text</p>
                 <p class="prev" onclick="displayAns8(), removeCard8()">Answer</p>
                 <span class="ans" id="ans8">oh yeah sheesh</span>
                 <button type="button" onclick="closePopup23(), removeAns8()">close</button>
@@ -94,7 +94,7 @@
             <li class="points" id="card9" onclick="openPopup24()">400</li>
             <div class="popup" id="popup24">
                 <h2>400 POINT QUESTION</h2>
-                <p>i am some super mega epic text</p>
+                <p class="question">i am some super mega epic text</p>
                 <p class="prev" onclick="displayAns9(), removeCard9()">Answer</p>
                 <span class="ans" id="ans9">oh yeayea</span>
                 <button type="button" onclick="closePopup24(), removeAns9()">close</button>
@@ -102,7 +102,7 @@
             <li class="points" id="card10" onclick="openPopup25()">500</li>
             <div class="popup" id="popup25">
                 <h2>500 POINT QUESTION</h2>
-                <p>i am final boss epic text</p>
+                <p class="question">i am final boss epic text</p>
                 <p class="prev" onclick="displayAns10(), removeCard10()">Answer</p>
                 <span class="ans" id="ans10">surprising</span>
                 <button type="button" onclick="closePopup25(), removeAns10()">close</button>
@@ -113,7 +113,7 @@
             <li class="points" id="card11" onclick="openPopup31()">100</li>
             <div class="popup" id="popup31">
                 <h2>100 POINT QUESTION</h2>
-                <p>i am some new text</p>
+                <p class="question">i am some new text</p>
                 <p class="prev" onclick="displayAns11(), removeCard11()">Answer</p>
                 <span class="ans" id="ans11">back again?</span>
                 <button type="button" onclick="closePopup31(), removeAns11()">close</button>
@@ -121,7 +121,7 @@
             <li class="points" id="card12" onclick="openPopup32()">200</li>
             <div class="popup" id="popup32">
                 <h2>200 POINT QUESTION</h2>
-                <p>i am some newer text</p>
+                <p class="question">i am some newer text</p>
                 <p class="prev" onclick="displayAns12(), removeCard12()">Answer</p>
                 <span class="ans" id="ans12">meow bruh</span>
                 <button type="button" onclick="closePopup32(), removeAns12()">close</button>
@@ -129,7 +129,7 @@
             <li class="points" id="card13" onclick="openPopup33()">300</li>
             <div class="popup" id="popup33">
                 <h2>300 POINT QUESTION</h2>
-                <p>i am some even newer text</p>
+                <p class="question">i am some even newer text</p>
                 <p class="prev" onclick="displayAns13(), removeCard13()">Answer</p>
                 <span class="ans" id="ans13">*hits the griddy*</span>
                 <button type="button" onclick="closePopup33(), removeAns13()">close</button>
@@ -137,7 +137,7 @@
             <li class="points" id="card14" onclick="openPopup34()">400</li>
             <div class="popup" id="popup34">
                 <h2>400 POINT QUESTION</h2>
-                <p>dont look at me</p>
+                <p class="question">dont look at me</p>
                 <p class="prev" onclick="displayAns14(), removeCard14()">Answer</p>
                 <span class="ans" id="ans14">shits and farts</span>
                 <button type="button" onclick="closePopup34(), removeAns14()">close</button>
@@ -145,7 +145,7 @@
             <li class="points" id="card15" onclick="openPopup35()">500</li>
             <div class="popup" id="popup35">
                 <h2>500 POINT QUESTION</h2>
-                <p>i said dont look at me</p>
+                <p class="question">i said dont look at me</p>
                 <p class="prev" onclick="displayAns15(), removeCard15()">Answer</p>
                 <span class="ans" id="ans15">poops and doops</span>
                 <button type="button" onclick="closePopup35(), removeAns15()">close</button>
@@ -156,7 +156,7 @@
             <li class="points" id="card16" onclick="openPopup41()">100</li>
             <div class="popup" id="popup41">
                 <h2>100 POINT QUESTION</h2>
-                <p>bruh face momen</p>
+                <p class="question">bruh face momen</p>
                 <p class="prev" onclick="displayAns16(), removeCard16()">Answer</p>
                 <span class="ans" id="ans16">gwafwafwad</span>
                 <button type="button" onclick="closePopup41(), removeAns16()">close</button>
@@ -164,7 +164,7 @@
             <li class="points" id="card17" onclick="openPopup42()">200</li>
             <div class="popup" id="popup42">
                 <h2>200 POINT QUESTION</h2>
-                <p>cmon bruh, look at u</p>
+                <p class="question">cmon bruh, look at u</p>
                 <p class="prev" onclick="displayAns17(), removeCard17()">Answer</p>
                 <span class="ans" id="ans17">omg omg omg</span>
                 <button type="button" onclick="closePopup42(), removeAns17()">close</button>
@@ -172,7 +172,7 @@
             <li class="points" id="card18" onclick="openPopup43()">300</li>
             <div class="popup" id="popup43">
                 <h2>300 POINT QUESTION</h2>
-                <p>bruh still lookin goofy</p>
+                <p class="question">bruh still lookin goofy</p>
                 <p class="prev" onclick="displayAns18(), removeCard18()">Answer</p>
                 <span class="ans" id="ans18">spiderpig</span>
                 <button type="button" onclick="closePopup43(), removeAns18()">close</button>
@@ -180,7 +180,7 @@
             <li class="points" id="card19" onclick="openPopup44()">400</li>
             <div class="popup" id="popup44">
                 <h2>400 POINT QUESTION</h2>
-                <p>why bruh still here?</p>
+                <p class="question">why bruh still here?</p>
                 <p class="prev" onclick="displayAns19(), removeCard19()">Answer</p>
                 <span class="ans" id="ans19">cody is gay</span>
                 <button type="button" onclick="closePopup44(), removeAns19()">close</button>
@@ -188,7 +188,7 @@
            <li class="points" id="card20" onclick="openPopup45()">500</li>
            <div class="popup" id="popup45">
             <h2>500 POINT QUESTION</h2>
-            <p>go away bruh frfr</p>
+            <p class="question">go away bruh frfr</p>
             <p class="prev" onclick="displayAns20(), removeCard20()">Answer</p>
             <span class="ans" id="ans20">chief littlefoot</span>
             <button type="button" onclick="closePopup45(), removeAns20()">close</button>
@@ -199,7 +199,7 @@
             <li class="points" id="card21" onclick="openPopup51()">100</li>
             <div class="popup" id="popup51">
                 <h2>100 POINT QUESTION</h2>
-                <p>bruhbruhbruh</p>
+                <p class="question">bruhbruhbruh</p>
                 <p class="prev" onclick="displayAns21(), removeCard21()">Answer</p>
                 <span class="ans" id="ans21">andrew the giant</span>
                 <button type="button" onclick="closePopup51(), removeAns21()">close</button>
@@ -207,7 +207,7 @@
             <li class="points" id="card22" onclick="openPopup52()">200</li>
             <div class="popup" id="popup52">
                 <h2>200 POINT QUESTION</h2>
-                <p>cmon lil bruh watchu doin?</p>
+                <p class="question">cmon lil bruh watchu doin?</p>
                 <p class="prev" onclick="displayAns22(), removeCard22()">Answer</p>
                 <span class="ans" id="ans22">ivar the micro</span>
                 <button type="button" onclick="closePopup52(), removeAns22()">close</button>
@@ -215,7 +215,7 @@
             <li class="points" id="card23" onclick="openPopup53()">300</li>
             <div class="popup" id="popup53">
                 <h2>300 POINT QUESTION</h2>
-                <p>dont keep goin bruh</p>
+                <p class="question">dont keep goin bruh</p>
                 <p class="prev" onclick="displayAns23(), removeCard23()">Answer</p>
                 <span class="ans" id="ans23">micro jackson</span>
                 <button type="button" onclick="closePopup53(), removeAns23()">close</button>
@@ -223,7 +223,7 @@
             <li class="points" id="card24" onclick="openPopup54()">400</li>
             <div class="popup" id="popup54">
                 <h2>400 POINT QUESTION</h2>
-                <p>hello im rydawg</p>
+                <p class="question">hello im rydawg</p>
                 <p class="prev" onclick="displayAns24(), removeCard24()">Answer</p>
                 <span class="ans" id="ans24">Lil Chola</span>
                 <button type="button" onclick="closePopup54(), removeAns24()">close</button>
@@ -231,7 +231,7 @@
             <li class="points" id="card25" onclick="openPopup55(), removeCard25()">500</li>
            <div class="popup" id="popup55">
             <h2>500 POINT QUESTION</h2>
-            <p>now youve really pissed me off</p>
+            <p class="question">now youve really pissed me off</p>
             <p class="prev" onclick="displayAns25()">Answer</p>
             <span class="ans" id="ans25">little show</span>
             <button type="button" onclick="closePopup55(), removeAns25()">close</button>
