--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="body-page">
     <header class="top-header">
-    <h1>Placeholder!</h1>
+    <h1>Jeopardy!</h1>
     <div>
     <p>Score: <span class="score" id="score1">0</span></p><button class="addpts" onclick="scoreUpdate('score1',100)">Add 100 pts.</button><button class="subpts" onclick="scoreUpdate('score1',-100)">Sub 100 pts.</button>
     </div>
@@ -23,11 +23,11 @@
     </header>
     <div class="entire">
         <ul class="col" style="padding-left: 0px;">
-            <li class="cat">Tim</li>
+            <li class="cat">Timmy Time</li>
             <li class="points" id="card1" onclick="openPopup()">100</li>
                 <div class="popup" id="popup">
-                <h2>100 POINT QUESTION</h2>
-                <p class="question">this racial slur is among tims favorites to shout</p>
+                <h2>100 POINT QUESTION</h2> <!-- [CATEGORY 1 START] -->
+                <p class="question">this racial slur is most common in tims vocabulary</p>
                 <p class="prev" onclick="displayAns(), removeCard()">Answer</p>
                 <span class="ans" id="ans">the n-word</span>
                 <button type="button" onclick="closePopup(), removeAns()">close</button>
@@ -35,66 +35,66 @@
             <li class="points" id="card2" onclick="openPopup2()">200</li>
             <div class="popup" id="popup2">
                 <h2>200 POINT QUESTION</h2>
-                <p class="question">This is epic example text.</p>
+                <p class="question">the name of Tim's original character</p>
                 <p class="prev" onclick="displayAns2(), removeCard2()">Answer</p>
-                <span class="ans" id="ans2">poopy text</span>
+                <span class="ans" id="ans2">Ghost</span>
                 <button type="button" onclick="closePopup2(), removeAns2()">close</button>
             </div>
             <li class="points" id="card3" onclick="openPopup3()">300</li>
             <div class="popup" id="popup3">
                 <h2>300 POINT QUESTION</h2>
-                <p class="question">This is some more example text.</p>
+                <p class="question">tim randomly kicking this object gave his foot a big owie</p>
                 <p class="prev" onclick="displayAns3(), removeCard3()">Answer</p>
-                <span class="ans" id="ans3">poopy doopy text</span>
+                <span class="ans" id="ans3">evil wooden pallet</span>
                 <button type="button" onclick="closePopup3(), removeAns3()">close</button>
             </div>
             <li class="points" id="card4" onclick="openPopup4()">400</li>
             <div class="popup" id="popup4">
                 <h2>400 POINT QUESTION</h2>
-                <p class="question">This is some more epic example text.</p>
+                <p class="question">this is what tim would do if Biden made being gay mandatory</p>
                 <p class="prev" onclick="displayAns4(), removeCard4()">Answer</p>
-                <span class="ans" id="ans4">silly text</span>
+                <span class="ans" id="ans4">kill himself</span>
                 <button type="button" onclick="closePopup4(), removeAns4()">close</button>
             </div>
             <li class="points" id="card5" onclick="openPopup5()">500</li>
             <div class="popup" id="popup5">
                 <h2>500 POINT QUESTION</h2>
-                <p class="question">This is the final epic example text.</p>
+                <p class="question">a world record that tim is very well practiced in</p>
                 <p class="prev" onclick="displayAns5(), removeCard5()">Answer</p>
-                <span class="ans" id="ans5">silly billy text</span>
+                <span class="ans" id="ans5">eating upside-down the fastest</span>
                 <button type="button" onclick="closePopup5(), removeAns5()">close</button>
             </div>
-        </ul>
+        </ul>   <!-- [CATEGORY 1 END] -->
         <ul class="col">
-            <li class="cat">Category 2</li>
+            <li class="cat">Gamer Moment</li>
             <li class="points" id="card6" onclick="openPopup21()">100</li>
             <div class="popup" id="popup21">
-                    <h2>100 POINT QUESTION</h2>
-                    <p class="question">i am some text</p>
+                    <h2>100 POINT QUESTION</h2> <!-- [CATEGORY 2 START] -->
+                    <p class="question">the character adam plays most in Smash Bros. Melee</p>
                     <p class="prev" onclick="displayAns6(), removeCard6()">Answer</p>
-                    <span class="ans" id="ans6">im the answer</span>
+                    <span class="ans" id="ans6">Marth</span>
                     <button type="button" onclick="closePopup21(), removeAns6()">close</button>
             </div>
             <li class="points" id="card7" onclick="openPopup22()">200</li>
             <div class="popup" id="popup22">
                 <h2>200 POINT QUESTION</h2>
-                <p class="question">i am some more epic text</p>
+                <p class="question">the full name of Tim's gamertag</p>
                 <p class="prev" onclick="displayAns7(), removeCard7()">Answer</p>
-                <span class="ans" id="ans7">no, im the answer</span>
+                <span class="ans" id="ans7">RecallingWharf5</span>
                 <button type="button" onclick="closePopup22(), removeAns7()">close</button>
             </div>
             <li class="points" id="card8" onclick="openPopup23()">300</li>
             <div class="popup" id="popup23">
                 <h2>300 POINT QUESTION</h2>
-                <p class="question">i am some more extra epic text</p>
+                <p class="question">Jason's minecraft house was based off this cartoon building</p>
                 <p class="prev" onclick="displayAns8(), removeCard8()">Answer</p>
-                <span class="ans" id="ans8">oh yeah sheesh</span>
+                <span class="ans" id="ans8">Krusty Towers</span>
                 <button type="button" onclick="closePopup23(), removeAns8()">close</button>
             </div>
             <li class="points" id="card9" onclick="openPopup24()">400</li>
             <div class="popup" id="popup24">
                 <h2>400 POINT QUESTION</h2>
-                <p class="question">i am some super mega epic text</p>
+                <p class="question">the character adam desperately wants added to Fortnite</p>
                 <p class="prev" onclick="displayAns9(), removeCard9()">Answer</p>
                 <span class="ans" id="ans9">oh yeayea</span>
                 <button type="button" onclick="closePopup24(), removeAns9()">close</button>
@@ -107,12 +107,12 @@
                 <span class="ans" id="ans10">surprising</span>
                 <button type="button" onclick="closePopup25(), removeAns10()">close</button>
             </div>
-        </ul>
+        </ul>   <!-- [CATEGORY 2 END] -->
         <ul class="col">
             <li class="cat">Category 3</li>
             <li class="points" id="card11" onclick="openPopup31()">100</li>
             <div class="popup" id="popup31">
-                <h2>100 POINT QUESTION</h2>
+                <h2>100 POINT QUESTION</h2> <!-- [CATEGORY 3 START] -->
                 <p class="question">i am some new text</p>
                 <p class="prev" onclick="displayAns11(), removeCard11()">Answer</p>
                 <span class="ans" id="ans11">back again?</span>
@@ -150,93 +150,93 @@
                 <span class="ans" id="ans15">poops and doops</span>
                 <button type="button" onclick="closePopup35(), removeAns15()">close</button>
             </div>
-        </ul>
+        </ul>   <!-- [CATEGORY 3 END] -->
         <ul class="col">
-            <li class="cat">Category 4</li>
+            <li class="cat">Traveling</li>
             <li class="points" id="card16" onclick="openPopup41()">100</li>
             <div class="popup" id="popup41">
-                <h2>100 POINT QUESTION</h2>
-                <p class="question">bruh face momen</p>
+                <h2>100 POINT QUESTION</h2> <!-- [CATEGORY 4 START] -->
+                <p class="question">andrew denied tim from bringing this item to the previous cabin adventure</p>
                 <p class="prev" onclick="displayAns16(), removeCard16()">Answer</p>
-                <span class="ans" id="ans16">gwafwafwad</span>
+                <span class="ans" id="ans16">Mushrooms</span>
                 <button type="button" onclick="closePopup41(), removeAns16()">close</button>
             </div>
             <li class="points" id="card17" onclick="openPopup42()">200</li>
             <div class="popup" id="popup42">
                 <h2>200 POINT QUESTION</h2>
-                <p class="question">cmon bruh, look at u</p>
+                <p class="question">this destination was the boys first big outing</p>
                 <p class="prev" onclick="displayAns17(), removeCard17()">Answer</p>
-                <span class="ans" id="ans17">omg omg omg</span>
+                <span class="ans" id="ans17">Mount Tammany</span>
                 <button type="button" onclick="closePopup42(), removeAns17()">close</button>
             </div>
             <li class="points" id="card18" onclick="openPopup43()">300</li>
             <div class="popup" id="popup43">
                 <h2>300 POINT QUESTION</h2>
-                <p class="question">bruh still lookin goofy</p>
+                <p class="question">this show was frequently viewed during the first cabin trip</p>
                 <p class="prev" onclick="displayAns18(), removeCard18()">Answer</p>
-                <span class="ans" id="ans18">spiderpig</span>
+                <span class="ans" id="ans18">Psych</span>
                 <button type="button" onclick="closePopup43(), removeAns18()">close</button>
             </div>
             <li class="points" id="card19" onclick="openPopup44()">400</li>
             <div class="popup" id="popup44">
                 <h2>400 POINT QUESTION</h2>
-                <p class="question">why bruh still here?</p>
+                <p class="question">this sweet finger food was a favorite from the steakhouse in NY</p>
                 <p class="prev" onclick="displayAns19(), removeCard19()">Answer</p>
-                <span class="ans" id="ans19">cody is gay</span>
+                <span class="ans" id="ans19">Honey Grilled Cheese</span>
                 <button type="button" onclick="closePopup44(), removeAns19()">close</button>
             </div>
            <li class="points" id="card20" onclick="openPopup45()">500</li>
            <div class="popup" id="popup45">
             <h2>500 POINT QUESTION</h2>
-            <p class="question">go away bruh frfr</p>
+            <p class="question">the diner waitress asked Adam if he wanted this menu item</p>
             <p class="prev" onclick="displayAns20(), removeCard20()">Answer</p>
-            <span class="ans" id="ans20">chief littlefoot</span>
+            <span class="ans" id="ans20">A Super Salad</span>
             <button type="button" onclick="closePopup45(), removeAns20()">close</button>
-        </div>
-        </ul>
+            </div>
+        </ul>   <!-- [CATEGORY 4 END] -->
         <ul class="col">
             <li class="cat">Misc.</li>
             <li class="points" id="card21" onclick="openPopup51()">100</li>
             <div class="popup" id="popup51">
-                <h2>100 POINT QUESTION</h2>
-                <p class="question">bruhbruhbruh</p>
+                <h2>100 POINT QUESTION</h2> <!-- [CATEGORY 5 START] -->
+                <p class="question">this titular wrestling show's roster includes 'Guitar Guy' and 'Sergeant Dan'</p>
                 <p class="prev" onclick="displayAns21(), removeCard21()">Answer</p>
-                <span class="ans" id="ans21">andrew the giant</span>
+                <span class="ans" id="ans21">HKW</span>
                 <button type="button" onclick="closePopup51(), removeAns21()">close</button>
             </div>
             <li class="points" id="card22" onclick="openPopup52()">200</li>
             <div class="popup" id="popup52">
                 <h2>200 POINT QUESTION</h2>
-                <p class="question">cmon lil bruh watchu doin?</p>
+                <p class="question">this refreshing beverage is the only thing Ryan will partake in drinking</p>
                 <p class="prev" onclick="displayAns22(), removeCard22()">Answer</p>
-                <span class="ans" id="ans22">ivar the micro</span>
+                <span class="ans" id="ans22">Mountain Dew Code Red</span>
                 <button type="button" onclick="closePopup52(), removeAns22()">close</button>
             </div>
             <li class="points" id="card23" onclick="openPopup53()">300</li>
             <div class="popup" id="popup53">
                 <h2>300 POINT QUESTION</h2>
-                <p class="question">dont keep goin bruh</p>
+                <p class="question">the name that was peed onto Adam's neighbor's driveway</p>
                 <p class="prev" onclick="displayAns23(), removeCard23()">Answer</p>
-                <span class="ans" id="ans23">micro jackson</span>
+                <span class="ans" id="ans23">Jason</span>
                 <button type="button" onclick="closePopup53(), removeAns23()">close</button>
             </div>
             <li class="points" id="card24" onclick="openPopup54()">400</li>
             <div class="popup" id="popup54">
                 <h2>400 POINT QUESTION</h2>
-                <p class="question">hello im rydawg</p>
+                <p class="question">the weekly melee tournament streamed by asidyx (RFNTNOTN)</p>
                 <p class="prev" onclick="displayAns24(), removeCard24()">Answer</p>
-                <span class="ans" id="ans24">Lil Chola</span>
+                <span class="ans" id="ans24">Ryan Fight-Night Tonight On Tuesday/Thursday Night</span>
                 <button type="button" onclick="closePopup54(), removeAns24()">close</button>
             </div>
             <li class="points" id="card25" onclick="openPopup55(), removeCard25()">500</li>
            <div class="popup" id="popup55">
             <h2>500 POINT QUESTION</h2>
-            <p class="question">now youve really pissed me off</p>
+            <p class="question">this street sign by Tim's house was thieved by Mr_Json</p>
             <p class="prev" onclick="displayAns25()">Answer</p>
-            <span class="ans" id="ans25">little show</span>
+            <span class="ans" id="ans25">'Autistic Child' sign</span>
             <button type="button" onclick="closePopup55(), removeAns25()">close</button>
         </div>
-        </ul>
+        </ul>   <!-- [CATEGORY 5 END] -->
     </div>
 
     <script src="script.js"></script>
