--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
             <li class="points" id="card7" onclick="openPopup22()">200</li>
             <div class="popup" id="popup22">
                 <h2>200 POINT QUESTION</h2>
-                <p class="question">the full name of Tim's gamertag</p>
+                <p class="question">this person created the masterpiece that is 'Ruan Forrester'</p>
                 <p class="prev" onclick="displayAns7(), removeCard7()">Answer</p>
-                <span class="ans" id="ans7">RecallingWharf5</span>
+                <span class="ans" id="ans7">Mr_Json</span>
                 <button type="button" onclick="closePopup22(), removeAns7()">close</button>
             </div>
             <li class="points" id="card8" onclick="openPopup23()">300</li>
             <div class="popup" id="popup23">
                 <h2>300 POINT QUESTION</h2>
-                <p class="question">Jason's minecraft house was based off this cartoon building</p>
+                <p class="question">Cody friggin loves this platform fighting game</p>
                 <p class="prev" onclick="displayAns8(), removeCard8()">Answer</p>
-                <span class="ans" id="ans8">Krusty Towers</span>
+                <span class="ans" id="ans8">Brawlhalla</span>
                 <button type="button" onclick="closePopup23(), removeAns8()">close</button>
             </div>
             <li class="points" id="card9" onclick="openPopup24()">400</li>
@@ -96,58 +96,58 @@
                 <h2>400 POINT QUESTION</h2>
                 <p class="question">the character adam desperately wants added to Fortnite</p>
                 <p class="prev" onclick="displayAns9(), removeCard9()">Answer</p>
-                <span class="ans" id="ans9">oh yeayea</span>
+                <span class="ans" id="ans9">Family Guy/Peter Griffin</span>
                 <button type="button" onclick="closePopup24(), removeAns9()">close</button>
             </div>
             <li class="points" id="card10" onclick="openPopup25()">500</li>
             <div class="popup" id="popup25">
                 <h2>500 POINT QUESTION</h2>
-                <p class="question">i am final boss epic text</p>
+                <p class="question">Jason's minecraft house was based off this cartoon building</p>
                 <p class="prev" onclick="displayAns10(), removeCard10()">Answer</p>
-                <span class="ans" id="ans10">surprising</span>
+                <span class="ans" id="ans10">Krusty Towers</span>
                 <button type="button" onclick="closePopup25(), removeAns10()">close</button>
             </div>
         </ul>   <!-- [CATEGORY 2 END] -->
         <ul class="col">
-            <li class="cat">Category 3</li>
+            <li class="cat">Minecraft Lore</li>
             <li class="points" id="card11" onclick="openPopup31()">100</li>
             <div class="popup" id="popup31">
                 <h2>100 POINT QUESTION</h2> <!-- [CATEGORY 3 START] -->
-                <p class="question">i am some new text</p>
+                <p class="question">breeding chickens requires you feed them this item</p>
                 <p class="prev" onclick="displayAns11(), removeCard11()">Answer</p>
-                <span class="ans" id="ans11">back again?</span>
+                <span class="ans" id="ans11">Seeds</span>
                 <button type="button" onclick="closePopup31(), removeAns11()">close</button>
             </div>
             <li class="points" id="card12" onclick="openPopup32()">200</li>
             <div class="popup" id="popup32">
                 <h2>200 POINT QUESTION</h2>
-                <p class="question">i am some newer text</p>
+                <p class="question">this minecraft parody features the lyrics "the creeper's tryna steal all our stuff again"</p>
                 <p class="prev" onclick="displayAns12(), removeCard12()">Answer</p>
-                <span class="ans" id="ans12">meow bruh</span>
+                <span class="ans" id="ans12">Revenge - Captain Sparklez</span>
                 <button type="button" onclick="closePopup32(), removeAns12()">close</button>
             </div>
             <li class="points" id="card13" onclick="openPopup33()">300</li>
             <div class="popup" id="popup33">
                 <h2>300 POINT QUESTION</h2>
-                <p class="question">i am some even newer text</p>
+                <p class="question">minecraft is currently updated to this version</p>
                 <p class="prev" onclick="displayAns13(), removeCard13()">Answer</p>
-                <span class="ans" id="ans13">*hits the griddy*</span>
+                <span class="ans" id="ans13">1.19</span>
                 <button type="button" onclick="closePopup33(), removeAns13()">close</button>
             </div>
             <li class="points" id="card14" onclick="openPopup34()">400</li>
             <div class="popup" id="popup34">
                 <h2>400 POINT QUESTION</h2>
-                <p class="question">dont look at me</p>
+                <p class="question">the strongest material to make tools and armor</p>
                 <p class="prev" onclick="displayAns14(), removeCard14()">Answer</p>
-                <span class="ans" id="ans14">shits and farts</span>
+                <span class="ans" id="ans14">Netherite</span>
                 <button type="button" onclick="closePopup34(), removeAns14()">close</button>
             </div>
             <li class="points" id="card15" onclick="openPopup35()">500</li>
             <div class="popup" id="popup35">
                 <h2>500 POINT QUESTION</h2>
-                <p class="question">i said dont look at me</p>
+                <p class="question">the original name Notch gave Minecraft</p>
                 <p class="prev" onclick="displayAns15(), removeCard15()">Answer</p>
-                <span class="ans" id="ans15">poops and doops</span>
+                <span class="ans" id="ans15">Cave Game</span>
                 <button type="button" onclick="closePopup35(), removeAns15()">close</button>
             </div>
         </ul>   <!-- [CATEGORY 3 END] -->
