--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <li class="points" id="card11" onclick="openPopup31()">100</li>
             <div class="popup" id="popup31">
                 <h2>100 POINT QUESTION</h2> <!-- [CATEGORY 3 START] -->
-                <p class="question">breeding chickens requires you feed them this item</p>
+                <p class="question">breeding chickens requires you to feed them this item</p>
                 <p class="prev" onclick="displayAns11(), removeCard11()">Answer</p>
                 <span class="ans" id="ans11">Seeds</span>
                 <button type="button" onclick="closePopup31(), removeAns11()">close</button>
@@ -121,7 +121,7 @@
             <li class="points" id="card12" onclick="openPopup32()">200</li>
             <div class="popup" id="popup32">
                 <h2>200 POINT QUESTION</h2>
-                <p class="question">this minecraft parody features the lyrics "the creeper's tryna steal all our stuff again"</p>
+                <p class="question">this minecraft parody features the lyrics "the creeper's tried to steal all our stuff again"</p>
                 <p class="prev" onclick="displayAns12(), removeCard12()">Answer</p>
                 <span class="ans" id="ans12">Revenge - Captain Sparklez</span>
                 <button type="button" onclick="closePopup32(), removeAns12()">close</button>
@@ -129,9 +129,9 @@
             <li class="points" id="card13" onclick="openPopup33()">300</li>
             <div class="popup" id="popup33">
                 <h2>300 POINT QUESTION</h2>
-                <p class="question">minecraft is currently updated to this version</p>
+                <p class="question">this friendly red mob helps with crossing lava</p>
                 <p class="prev" onclick="displayAns13(), removeCard13()">Answer</p>
-                <span class="ans" id="ans13">1.19</span>
+                <span class="ans" id="ans13">Strider</span>
                 <button type="button" onclick="closePopup33(), removeAns13()">close</button>
             </div>
             <li class="points" id="card14" onclick="openPopup34()">400</li>
